src/styles/index.css
@import "tailwindcss";

@source "../../site/..";
@source not "../../vendor";

/* https://vite.dev/guide/assets#importing-asset-as-url Common image, media, and font filetypes are detected as assets automatically. You can extend the internal list using the assetsInclude option.*/
@font-face {
  font-family: "Codec Pro";
  src:
    url("/assets/fonts/CodecProVariableGX.ttf") format("truetype")
      tech("variations"),
    url("/assets/fonts/CodecProVariableGX.ttf") format("truetype-variations"),
    url("/assets/fonts/CodecProVariableGX.ttf") format("truetype");
  font-weight: 38 682;
  /*font-feature-settings: "frac" on;*/
  font-display: swap;
}

@property --grid-padding {
  syntax: "<length>";
  inherits: true;
  initial-value: 10px;
}
@property --grid-width {
  syntax: "<length>";
  inherits: true;
  initial-value: 100vw;
}
@property --header-height {
  syntax: "<length>";
  inherits: true;
  initial-value: 78px;
}

@property --text-md {
  syntax: "<length>";
  inherits: true;
  initial-value: 40px;
}

:root {
  /* @link https://utopia.fyi/type/calculator/?c=360,18,1.333,1240,22,1.414,5,2,&s=0.75,1.5|2|3|4|6,s-l&g=s,l,xl,12 */

  /* Step -2: 10.1301px → 11.0033px */
  --step--2: clamp(0.6331rem, 0.6108rem + 0.0992vw, 0.6877rem);
  /* Step -1: 13.5034px → 15.5587px */
  --step--1: clamp(0.844rem, 0.7914rem + 0.2336vw, 0.9724rem);
  /* Step 0: 18px → 22px */
  --step-0: clamp(1.125rem, 1.0227rem + 0.4545vw, 1.375rem);
  /* Step 1: 23.994px → 31.108px */
  --step-1: clamp(1.4996rem, 1.3177rem + 0.8084vw, 1.9443rem);
  /* Step 2: 31.984px → 43.9867px */
  --step-2: clamp(1.999rem, 1.6921rem + 1.3639vw, 2.7492rem);
  /* Step 3: 42.6347px → 62.1972px */
  --step-3: clamp(2.6647rem, 2.1645rem + 2.223vw, 3.8873rem);
  /* Step 4: 56.832px → 87.9469px */
  --step-4: clamp(3.552rem, 2.7565rem + 3.5358vw, 5.4967rem);
  /* Step 5: 75.7571px → 124.3569px */
  --step-5: clamp(4.7348rem, 3.4922rem + 5.5227vw, 7.7723rem);
}

@theme inline {
  --font-sans:
    "Codec Pro", "Gotham", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol", "Noto Color Emoji";

  --breakpoint-3xl: 120rem;

  --codec-pro-variable-wght: 38;
  --codec-pro-variable-ital: 100;

  /*
  USED FOR REFERENCE
  --breakpoint-sm: 40rem;
  --breakpoint-md: 48rem;
  --breakpoint-lg: 64rem;
  --breakpoint-xl: 80rem;
  --breakpoint-2xl: 96rem;*/

  --text-xs: var(--step--2);
  --text-xs--line-height: calc(1.25 / 0.875);
  --text-sm: var(--step--1);
  --text-sm--line-height: calc(1 / 0.75);
  --text-base: 1rem;
  --text-base--line-height: calc(1.5 / 1);
  --text-normal: var(--step-0);
  --text-normal--line-height: calc(1.5 / 1);
  --text-md: calc(var(--step-0) * 1.2);
  --text-md--line-height: calc(1.5 / 1);
  --text-lg: var(--step-1);
  --text-lg--line-height: calc(1.75 / 1.125);
  --text-xl: var(--step-2);
  --text-xl--line-height: calc(1.75 / 1.25);
  --text-2xl: var(--step-3);
  --text-2xl--line-height: calc(2 / 1.5);
  --text-3xl: var(--step-4);
  --text-3xl--line-height: calc(2.25 / 1.875);
  --text-4xl: var(--step-5);
  --text-4xl--line-height: calc(2.25 / 1.875);

  --color-gray-title: rgb(45 45 45);
  --color-gray-text: rgb(60 60 60);
  --color-gray-primary: rgb(60 60 60);

  --grid-max-width: 82rem;
  --grid-width: min(100vw, var(--grid-max-width));
  --grid-columns: repeat(12, minmax(0, 1fr));

  --header-height: 78px;

  --grid-padding: calc(2.5 * var(--spacing));
  --spacing-grid-padding: var(--grid-padding);

  --font-weight-thin: 38;
  --font-weight-extralight: 77;
  --font-weight-light: 118;
  --font-weight-news: 157;
  --font-weight-normal: 177;
  --font-weight-regular: 177;
  --font-weight-medium: 200;
  --font-weight-bold: 249;
  --font-weight-extrabold: 317;
  --font-weight-heavy: 377;
  --font-weight-ultra: 484;
  --font-weight-ultrablack: 593;
  --font-weight-fat: 682;
  --font-weight-black: 682;

  --shadow-md-upwards:
    0 -4px 6px -1px rgb(0 0 0 / 0.1), 0 -2px 4px -2px rgb(0 0 0 / 0.1);

  --ease-projects: cubic-bezier(0.44, 0.07, 0.41, 1);
  --z-header: 100;
}

@layer base {
  /*html {
    font-size: 100px;
  }*/
  html {
    @apply text-gray-text;
  }

  body {
    scrollbar-gutter: stable;
    /* ensure browser does not generate missing weights in font family */
    font-synthesis-weight: none;
    font-weight: var(--font-weight-normal);
  }

  picture,
  img {
    pointer-events: none;
  }

  @variant md {
    :root {
      --grid-columns: repeat(12, minmax(0, 1fr));
      --header-height: 48px;
    }
  }

  @variant lg {
    :root {
      --grid-padding: calc(4 * var(--spacing));
      --header-height: 78px;
    }
  }

  @variant xl {
    :root {
      --grid-padding: calc(6 * var(--spacing));
    }
  }

  pre {
    max-width: 100%;
    overflow: scroll;
  }

  strong {
    font-weight: var(--font-weight-extrabold);
  }

  c-header {
    header {
      visibility: hidden;
      opacity: 0;
    }
    html.-string & {
      &:not([hide="true"]) {
        header {
          visibility: visible;
          opacity: 1;
          transition: opacity 0.35s ease-out;
        }
      }
    }
  }

  c-home-intro {
    .from-fade {
      opacity: 0;
      html.-inline & {
        opacity: 1;
      }
    }
  }

  /*picture,
  img {
    pointer-events: none;
    user-select: none;
  }*/

  img[loading="lazy"][data-dom="lazy-media"] {
    opacity: 0;
    transition: opacity 0.35s ease-out;

    &.loaded {
      opacity: 1;
    }
    &.error {
      /*TODO: handle background on loading error*/
      content: "";
    }
  }
}

@layer components {
  .base-grid {
    @apply grid grid-cols-(--grid-columns) px-(--spacing-grid-padding) max-w-(--grid-max-width) mx-auto gap-(--spacing-grid-padding);
  }

  .sub-grid {
    @apply grid grid-cols-subgrid;
  }

  .link-after-fill {
    &:after {
      position: absolute;
      inset: 0;
      content: "";
      z-index: -1;
    }
  }

  .link {
  }
}

/* To use whenever needing to size element by columns but without using grid columns*/

@property --col-width {
  syntax: "length";
  inherits: false;
  initial-value: 0px;
}

@utility width-col-* {
  --col-width: calc((var(--grid-width) - 2 * var(--spacing-grid-padding)) / 12);
  width: calc(
    var(--col-width) * --value(integer) - var(--spacing-grid-padding)
  );
}

.grid-padding {
  @apply p-grid-padding;
}
.grid-padding-x {
  @apply px-grid-padding;
}
.grid-padding-y {
  @apply py-grid-padding;
}

@utility bd {
  border: 1px solid black;
}

@utility bdr {
  border: 1px solid red;
}

@utility bdg {
  border: 1px solid green;
}

@utility bdb {
  border: 1px solid blue;
}

@utility bdo {
  border: 1px solid orange;
}

.header-link-hover {
  font-weight: unset;
  font-variation-settings: "wght" var(--font-weight-bold);
  transition: font-variation-settings 0.3s ease;
  position: relative;
  line-height: 1;
  &:after,
  &:before {
    /*font-size: 1.5rem;*/
    font-variation-settings: "wght" var(--font-weight-bold);
    opacity: 0;
    position: absolute;
    top: 0%;
    height: 100%;
    transition: opacity 0.35s ease-out;
    content: "\00B7";
  }
  &:before {
    left: 0;
    translate: -8px -10% 0;
  }
  &:after {
    right: 0;
    translate: 8px -10% 0;
  }

  &[data-current=""] {
    font-variation-settings: "wght" var(--font-weight-bold);
    /*cursor: default;*/
    &:after,
    &:before {
      opacity: 1;
    }
  }

  @media (hover: hover) {
    &:hover:not([data-current=""]) {
      font-variation-settings: "wght" var(--font-weight-normal);
    }
  }
}

/* Classes to apply the variable instances */
.codec-pro-variable-italic {
  --codec-pro-variable-ital: 1000;
}

.codec-pro-variable-thin {
  --codec-pro-variable-wght: 38;
}

.codec-pro-variable-extralight {
  --codec-pro-variable-wght: 77;
}

.codec-pro-variable-light {
  --codec-pro-variable-wght: 118;
}

.codec-pro-variable-news {
  --codec-pro-variable-wght: 157;
}

.codec-pro-variable-regular {
  --codec-pro-variable-wght: 177;
}

.codec-pro-variable-bold {
  --codec-pro-variable-wght: 249;
}

.codec-pro-variable-extrabold {
  --codec-pro-variable-wght: 317;
}

.codec-pro-variable-heavy {
  --codec-pro-variable-wght: 377;
}

.codec-pro-variable-ultra {
  --codec-pro-variable-wght: 484;
}

.codec-pro-variable-ultrablack {
  --codec-pro-variable-wght: 593;
}

.codec-pro-variable-fat {
  --codec-pro-variable-wght: 682;
}

@utility text-cap {
  text-box: trim-both cap alphabetic;
}

.cta {
  @apply relative px-10 py-4 leading-none uppercase text-md font-extrabold text-cap;
  text-box: trim-both cap alphabetic;
}

.cta-light {
  @apply bg-white text-gray-text;
}
/* Apply the variable axes set by the classes */
/*.font-italic,
.font-thin,
.font-extralight,
.font-light,
.font-news,
.font-regular,
.font-bold,
.font-extrabold,
.font-heavy,
.font-ultra,
.font-ultrablack,
.font-fat {
  font-weight: var(--codec-pro-variable-wght);
  font-variation-settings: "ital" var(--codec-pro-variable-ital);
}*/

